Stop executing locator's threads when about to shutdown occurred

Mark that about to shutdown has occurred and don't start
any new thread after that.

Fixes: QTCREATORBUG-25318
Change-Id: I14d47c93dd8e8a82f6f68264a03d5831ec95da75
Reviewed-by: Eike Ziller <eike.ziller@qt.io>